# grainalyzer

./: .gitignore  1_Data_wrangling_and_clr.ipynb  Functions.py  How_to_use.ipynb  README.md  example.ipynb  pyproject.toml
.ipynb_checkpoints/: 1_Data_wrangling_and_clr-checkpoint.ipynb  Functions-checkpoint.py  How_to_use-checkpoint.ipynb
Data/: Test_GS-020.csv  Test_GS-040.csv  Test_GS-050.csv  Test_GS-060.csv  Test_GS-070.csv  Test_GS-080.csv  Test_GS-090.csv  Test_GS-100.csv  Test_GS-108.csv  Test_GS-112.csv  grainsizes_summarize.csv
grainalyzer/: grainalyzer.py
